--- a/Localizations/Base.lproj/Localizable.strings
+++ b/Localizations/Base.lproj/Localizable.strings
@@ -5,6 +5,8 @@
 "PostLikeConfirm" = "Confirm post like";
 "DownloadVideos" = "Download videos";
 "DownloadVideosDesc" = "Download videos from feed and stories with a long press";
+"RemoveRecs" = "Remove recommendations";
+"RemoveRecsDesc" = "Removes recommended posts\nNOTE: Needs enough follows to work properly";
 
 "Reels" = "Reels";
 "DownloadReels" = "Download reels";
@@ -24,7 +26,8 @@
 "EncodingSpeed" = "Encoding speed";
 "EncodingSpeedDesc" = "Video encoding speed:\n• Ultrafast: Fastest processing, larger file size.\n• Faster: Good speed and file size balance.\n• Medium: Slower processing, smaller file size.";
 
-"Cache" = "Cache";
+"Other" = "Other";
+"NotifyUpdates" = "Notify about updates";
 "AutoClearCache" = "Clear cache on startup";
 "ClearCache" = "Clear cache";
 
@@ -58,6 +61,12 @@
 "SomethingWentWrong" = "Something went wrong";
 "GlowSettings" = "Glow settings";
 "FacebookSettings" = "Facebook settings";
+
+"NewUpdate" = "Update available: v%@";
+"Update.Tweak" = "Download tweak";
+"Update.IPA" = "Download IPA";
+"Update.Repo" = "Repositories";
+"Update.Dismiss" = "Dismiss";
 
 "Welcome.Download" = "Download Media";
 "Welcome.DownloadDesc" = "Download whatever you like — videos, images, Reels, and even stories.";
