--- a/Localizations/fr.lproj/Localizable.strings
+++ b/Localizations/fr.lproj/Localizable.strings
@@ -5,6 +5,8 @@
 "PostLikeConfirm" = "Confirmer le post comme";
 "DownloadVideos" = "Télécharger des vidéos";
 "DownloadVideosDesc" = "Téléchargez des vidéos à partir du flux et des stories avec un appui long";
+"RemoveRecs" = "Remove recommendations";
+"RemoveRecsDesc" = "Removes recommended posts\nNOTE: Needs enough follows to work properly";
 
 "Reels" = "Réels";
 "DownloadReels" = "Télécharger les Réels";
@@ -24,7 +26,8 @@
 "EncodingSpeed" = "Encoding speed";
 "EncodingSpeedDesc" = "Video encoding speed:\n• Ultrafast: Fastest processing, larger file size.\n• Faster: Good speed and file size balance.\n• Medium: Slower processing, smaller file size.";
 
-"Cache" = "Cache";
+"Other" = "Other";
+"NotifyUpdates" = "Notify about updates";
 "AutoClearCache" = "Vider le cache au démarrage";
 "ClearCache" = "Vider le cache";
 
@@ -58,6 +61,12 @@
 "SomethingWentWrong" = "Quelque chose s'est mal passé";
 "GlowSettings" = "Paramètres de Glow";
 "FacebookSettings" = "Paramètres de Facebook";
+
+"NewUpdate" = "Update available: v%@";
+"Update.Tweak" = "Download tweak";
+"Update.IPA" = "Download IPA";
+"Update.Repo" = "Repositories";
+"Update.Dismiss" = "Dismiss";
 
 "Welcome.Download" = "Télécharger des médias";
 "Welcome.DownloadDesc" = "Téléchargez ce que vous voulez : vidéos, images, Reels et même des stories.";
