--- a/Localizations/vi.lproj/Localizable.strings
+++ b/Localizations/vi.lproj/Localizable.strings
@@ -5,6 +5,8 @@
 "PostLikeConfirm" = "Xác nhận thích bài viết";
 "DownloadVideos" = "Tải video";
 "DownloadVideosDesc" = "Nhấn giữ để tải video từ bảng tin và story";
+"RemoveRecs" = "Remove recommendations";
+"RemoveRecsDesc" = "Removes recommended posts\nNOTE: Needs enough follows to work properly";
 
 "Reels" = "Reels";
 "DownloadReels" = "Tải reels";
@@ -24,7 +26,8 @@
 "EncodingSpeed" = "Tốc độ mã hóa";
 "EncodingSpeedDesc" = "Tốc độ mã hóa video:\n• Ultrafast: Xử lý nhanh nhất, kích thước tệp lớn hơn.\n• Faster: Cân bằng giữa tốc độ và kích thước tệp.\n• Medium: Xử lý chậm hơn, kích thước tệp nhỏ hơn.";
 
-"Cache" = "Bộ nhớ đệm";
+"Other" = "Other";
+"NotifyUpdates" = "Notify about updates";
 "AutoClearCache" = "Xóa bộ nhớ đệm khi khởi động";
 "ClearCache" = "Xóa bộ nhớ đệm";
 
@@ -58,6 +61,12 @@
 "SomethingWentWrong" = "Đã xảy ra lỗi";
 "GlowSettings" = "Cài đặt Glow";
 "FacebookSettings" = "Cài đặt Facebook";
+
+"NewUpdate" = "Update available: v%@";
+"Update.Tweak" = "Download tweak";
+"Update.IPA" = "Download IPA";
+"Update.Repo" = "Repositories";
+"Update.Dismiss" = "Dismiss";
 
 "Welcome.Download" = "Tải phương tiện";
 "Welcome.DownloadDesc" = "Tải bất cứ gì bạn thích — video, hình ảnh, reels, thậm chí cả story.";
