--- a/Localizations/zh-Hans.lproj/Localizable.strings
+++ b/Localizations/zh-Hans.lproj/Localizable.strings
@@ -5,8 +5,8 @@
 "PostLikeConfirm" = "点赞确认";
 "DownloadVideos" = "下载视频";
 "DownloadVideosDesc" = "长按从动态和故事中下载视频";
-"RemoveRecs" = "Remove recommendations";
-"RemoveRecsDesc" = "Removes recommended posts\nNOTE: Needs enough follows to work properly";
+"RemoveRecs" = "移除推荐帖子";
+"RemoveRecsDesc" = "移除推荐帖子\n注意：需要有足够的关注用户才能正常运行";
 
 "Reels" = "短视频";
 "DownloadReels" = "显示下载按钮";
@@ -26,8 +26,8 @@
 "EncodingSpeed" = "编码速度";
 "EncodingSpeedDesc" = "视频编码速度\n• 极速(Ultrafast)：处理速度最快，文件体积较大。\n• 更快(Faster)：速度与文件大小平衡良好。\n• 中等(Medium)：处理较慢，文件体积较小。";
 
-"Other" = "Other";
-"NotifyUpdates" = "Notify about updates";
+"Other" = "其他";
+"NotifyUpdates" = "更新提醒";
 "AutoClearCache" = "启动时清除缓存";
 "ClearCache" = "清除缓存";
 
@@ -62,14 +62,14 @@
 "GlowSettings" = "Glow 设置";
 "FacebookSettings" = "Facebook 设置";
 
-"NewUpdate" = "Update available: v%@";
-"Update.Tweak" = "Download tweak";
-"Update.IPA" = "Download IPA";
-"Update.Repo" = "Repositories";
-"Update.Dismiss" = "Dismiss";
+"NewUpdate" = "可用更新：v%@";
+"Update.Tweak" = "下载插件";
+"Update.IPA" = "下载 IPA";
+"Update.Repo" = "越狱源";
+"Update.Dismiss" = "忽略";
 
 "Welcome.Download" = "下载媒体";
-"Welcome.DownloadDesc" = "想下载什么都可以 — 视频、图片、Reels，甚至是故事。";
+"Welcome.DownloadDesc" = "想下载什么都可以 — 视频、图片、短视频，甚至是故事。";
 "Welcome.Incognito" = "隐身模式";
 "Welcome.IncognitoDesc" = "保持隐身。只有在你想看的时候才标记为已看。";
 "Welcome.Confirmation" = "操作确认";
