--- a/Localizations/ar.lproj/Localizable.strings
+++ b/Localizations/ar.lproj/Localizable.strings
@@ -5,8 +5,8 @@
 "PostLikeConfirm" = "تأكيد الإعجاب";
 "DownloadVideos" = "حفظ الفيديوهات";
 "DownloadVideosDesc" = "يتيح لك حفظ جميع الفيديوهات والقصص بالضغط المطوّل";
-"RemoveRecs" = "Remove recommendations";
-"RemoveRecsDesc" = "Removes recommended posts\nNOTE: Needs enough follows to work properly";
+"RemoveRecs" = "إزالة التوصيات";
+"RemoveRecsDesc" = "يزيل المنشورات الموصى بها\nملاحظة: يتطلب عددًا كافيًا من المتابعات ليعمل بشكل صحيح";
 
 "Reels" = "الريلز";
 "DownloadReels" = "حفظ فيديوهات الريلز";
@@ -26,8 +26,8 @@
 "EncodingSpeed" = "سرعة اعادة الترميز";
 "EncodingSpeedDesc" = "سرعة إعادة ترميز الفيديو:\n• فائق السرعة (ultrafast): أقصى سرعة، جودة أقل، وحجم ملف أكبر.\n• سريع (faster): سرعة جيدة، وجودة متوسطة.\n• متوسط (medium): أفضل توازن بين السرعة والجودة، وحجم ملف أصغر.";
 
-"Other" = "Other";
-"NotifyUpdates" = "Notify about updates";
+"Other" = "أخرى";
+"NotifyUpdates" = "إعلام بالتحديثات";
 "AutoClearCache" = "تنظيف الملفات المؤقته عند بدء التطبيق";
 "ClearCache" = "تنظيف الملفات المؤقته";
 
@@ -62,11 +62,11 @@
 "GlowSettings" = "اعدادات Glow";
 "FacebookSettings" = "اعدادات Facebook";
 
-"NewUpdate" = "Update available: v%@";
-"Update.Tweak" = "Download tweak";
-"Update.IPA" = "Download IPA";
-"Update.Repo" = "Repositories";
-"Update.Dismiss" = "Dismiss";
+"NewUpdate" = "تحديث متوفر: v%@";
+"Update.Tweak" = "تحميل الأداة";
+"Update.IPA" = "تحميل IPA";
+"Update.Repo" = "المستودعات";
+"Update.Dismiss" = "تجاهل";
 
 "Welcome.Download" = "حفظ الفيديوهات";
 "Welcome.DownloadDesc" = "احفظ كل ماتريد من فيديوهات، صور.، ريلز ، وحتى القصص";
