--- a/Localizations/pl.lproj/Localizable.strings
+++ b/Localizations/pl.lproj/Localizable.strings
@@ -5,8 +5,8 @@
 "PostLikeConfirm" = "Potwierdź polubienie posta";
 "DownloadVideos" = "Pobieraj filmy";
 "DownloadVideosDesc" = "Pobieraj filmy z postów i relacji przez długie naciśnięcie";
-"RemoveRecs" = "Remove recommendations";
-"RemoveRecsDesc" = "Removes recommended posts\nNOTE: Needs enough follows to work properly";
+"RemoveRecs" = "Usuń rekomendacje";
+"RemoveRecsDesc" = "Usuwa polecane posty\nUWAGA: Wymaga odpowiedniej liczby obserwowanych, aby działać poprawnie";
 
 "Reels" = "Posty";
 "DownloadReels" = "Pobierz posty";
@@ -26,8 +26,8 @@
 "EncodingSpeed" = "Prędkość przetwarzania";
 "EncodingSpeedDesc" = "Prędkość przetwarzania filmu\n• Ultrafast: Najszybsze przetwarzanie, duży rozmiar pliku.\n• Faster: Dobra prędkość i średni rozmiar pliku.\n• Medium: Wolne przetwarzanie, mały rozmiar pliku.";
 
-"Other" = "Other";
-"NotifyUpdates" = "Notify about updates";
+"Other" = "Inne";
+"NotifyUpdates" = "Powiadamiaj o aktualizacjach";
 "AutoClearCache" = "Wyczyść pamięć przy starcie";
 "ClearCache" = "Wyczyść pamięć podręczną";
 
@@ -62,11 +62,11 @@
 "GlowSettings" = "Ustawienia Glow";
 "FacebookSettings" = "Ustawienia Facebook";
 
-"NewUpdate" = "Update available: v%@";
-"Update.Tweak" = "Download tweak";
-"Update.IPA" = "Download IPA";
-"Update.Repo" = "Repositories";
-"Update.Dismiss" = "Dismiss";
+"NewUpdate" = "Dostępna aktualizacja: v%@";
+"Update.Tweak" = "Pobierz poprawkę";
+"Update.IPA" = "Pobierz IPA";
+"Update.Repo" = "Repozytoria";
+"Update.Dismiss" = "Zamknij";
 
 "Welcome.Download" = "Pobieraj media";
 "Welcome.DownloadDesc" = "Pobieraj co tylko chcesz – filmy, obrazy, posty oraz relacje.";
